chore: Bump level requirement; Remove craftcms/phpstan dependency

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
     "name": "fostercommerce/phpstan",
     "minimum-stability": "dev",
-    "require": {
-        "craftcms/phpstan": "dev-main"
-    },
+    "prefer-stable": true,
     "require-dev": {
         "roave/security-advisories": "dev-latest"
+    },
+    "require": {
+        "phpstan/phpstan": "^1.10"
     }
 }
